force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/Nota_Fiscal_Number__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal_Number__c</fullName>
    <description>This field is to capture the SAP NF number.</description>
    <inlineHelpText>This field is to capture the SAP NF number.</inlineHelpText>
    <label>Nota Fiscal Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>