force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_BillingDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillingDate__c</fullName>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>