force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_BillingDocType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillingDocType__c</fullName>
    <label>Billing Doc Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>