force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>