force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>