force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Comments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>