force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CompanyCode__c</fullName>
    <description>SAP company code (VBRK-BURKS). Always 4 characters (e.g. &quot;4000&quot;, &quot;1002&quot;, &quot;2000&quot;). Required for the conditional rule of the Nota_Fiscal_Number__c field.</description>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>