force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>