force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CurrencyCode__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>