force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_CustomerPONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerPONumber__c</fullName>
    <label>Customer Purchase Order #</label>
    <length>35</length>
    <type>Text</type>
</CustomField>