force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_DateDue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DateDue__c</fullName>
    <description>This field captures the date the invoice is due.</description>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>