force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_DateIssued__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DateIssued__c</fullName>
    <description>This Field captures the date the invoice was issued.</description>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>