force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Delivery__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Delivery associated to this invoice.</description>
    <label>Delivery</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>