force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExchangeRate__c</fullName>
    <description>Document exchange rate (VBRK-KURRF). The mapping specifies 9+5 decimals (scale=5). The org standard uses precision=18 for Number fields. Consistent with the PMC_CPQ_ExchangeRate__c already existing on OrderItem and Quote (scale=4 on those; here scale=5 as per the SAP specification).</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>