force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_EXTInvoiceComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EXTInvoiceComments__c</fullName>
    <description>This field captures the Comments in SAP invoice can be added in this comments field</description>
    <label>EXT Invoice Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>