force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InvoiceId__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>