force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InvoiceNumber__c</fullName>
    <description>This field is to capture the SAP Invoice Id.</description>
    <externalId>true</externalId>
    <label>SAP Invoice Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>