force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_NFAccessKey__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NFAccessKey__c</fullName>
    <description>Brazilian NF-e access key. 44 characters — concatenation of REGIO+NFYEAR+NFMONTH+STCD1+MODEL+SERIE+NFNUM9+DOCNUM9+CDV. Only populated for the BR company.</description>
    <label>NF Access Key</label>
    <length>44</length>
    <type>Text</type>
</CustomField>