force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_OriginalAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OriginalAmount__c</fullName>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>