force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_ParentInvoice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ParentInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Invoice</label>
    <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
    <relationshipLabel>Related Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>