force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Payer__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Payer)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>