force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentDueDate__c</fullName>
    <description>Due date calculated via BSEG + FM NET_DUE_DATE_GET. ISO 8601 format (YYYY-MM-DD). Equivalent to the PMC_CPQ_PaymentDueDate__c already existing on the OrderItem object.</description>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>