force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quantity__c</fullName>
    <description>The total quantity of the invoice.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>