force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_SAPDeliveryID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
    <formula>PMC_CPQ_Delivery__r.PMC_CPQ_SAPDeliveryID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Delivery ID</label>
    <type>Text</type>
</CustomField>