force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Sold To)</relationshipLabel>
    <relationshipName>PMC_CPQ_SoldToInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>