force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_SoldToSAPID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldToSAPID__c</fullName>
    <externalId>true</externalId>
    <label>Sold To SAP ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>