force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Storefront__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Storefront__c</fullName>
    <label>Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>