force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Terms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Terms__c</fullName>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>