force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalAmount__c</fullName>
    <description>Total value of the billing document (net + taxes). Consistent with the PMC_CPQ_TotalInvoiceValue__c and PMC_CPQ_OriginalAmount__c already existing on the same object</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>