force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>