force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_CPQ_User__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>