force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/PMC_DH_SAPInvoiceCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_SAPInvoiceCreatedDate__c</fullName>
    <label>SAP Invoice Created Date</label>
    <type>Date</type>
</CustomField>