force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/VCORemissionInvoice__c.field-meta.xml
<CustomField>
    <fullName>VCORemissionInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCO Remission Invoice</label>
    <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
    <relationshipLabel>Invoices (VCO Remission Invoice)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>