force-app/main/default/objects/PMC_CPQ_Invoice__c/fields/VCOSalesInvoice__c.field-meta.xml
<CustomField>
    <fullName>VCOSalesInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VCO Sales Invoice</label>
    <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
    <relationshipLabel>Invoices (VCO Sales Invoice)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>