force-app/main/default/objects/PMC_CPQ_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMC_CPQ_InvoiceNumber__c</columns>
    <columns>PMC_CPQ_SoldToAccount__c</columns>
    <columns>PMC_CPQ_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>PMC_CPQ_SAPDeliveryID__c</columns>
    <columns>PMC_CPQ_TotalInvoiceValue__c</columns>
    <columns>PMC_CPQ_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>